# gtest-min

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  tests.rs
