[package]
name = "gtest-min"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gstd = { git = "https://github.com/gear-tech/gear.git"}
gear-test-codegen = { git = "https://github.com/nikvolf/onchain-tests" }
gear-test-runtime = { git = "https://github.com/nikvolf/onchain-tests" }

[build-dependencies]
gear-ext-builder = { git = "https://github.com/nikvolf/onchain-tests" }
